<!-- Contains the static string resources used in the app -->
<resources>
    <string name="app_name">Dine-A-Bite</string>
    <string name="cart_text">Items in your cart: </string>
    <string name="cart_total_text">Total: </string>
    <string name="confirm_order">Confirm your order</string>
    <string name="ping_text">Ping text</string>
    <string name="account">Account</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="did_not_work_message">That didn\'t work!</string>
    <string name="menu_item">MenuItem</string>
    <string name="item_price">ItemPrice</string>
    <string name="count">Count</string>
    <string name="tab_global">Global</string>
    <string name="tab_stand">Per stand</string>
    <string name="tab_category">Categories</string>
    <string name="stand_spinner_text">Choose your stand: </string>
    <string name="category_spinner_text">Choose a category: </string>
    <string name="description">This is a description of the food item</string>
    <string name="brand">Brand:</string>
    <string name="order_id">Order:</string>
    <string name="order_name">Name</string>
    <string name="order_count">Count</string>
    <string name="order_price">Price</string>
    <string name="stand_recommend">Choose your stand</string>
    <string name="stand_recommendation">Your recommended stand: </string>
    <string name="stand_spinner_recommend">Pick your favorite recommendation: </string>
    <string name="brand_recommend">Brand:</string>
    <string name="confirm_stand">Confirm your stand</string>
    <string name="specific_stand_chosen">Your own chosen stand: </string>
    <string name="no_recommendation">No recommendation available.</string>
    <string name="recommend_time">You will have to wait: </string>
    <string name="recommend_distance">You will have to walk: </string>
    <string name="confirm_stand_order">Items you are confirming</string>
    <string name="confirm_item_text">Not available yet.</string>
    <string name="event_map">Stand locations: </string>
    <string name="chosen_brand">(By: </string>
    <string name="chosen_stand">Your pickup point: </string>
    <string name="title_activity_maps">Map</string>
    <string name="total">Total</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">Login failed</string>
    <string name="new_user_helper_text">Don\'t have an account?</string>
    <string name="shared_pref_file_key">com.example.attendeeapp.PREFERENCE_FILE_KEY</string>
    <string name="remaining_time">Your order is ready in: </string>
    <string name="personal_information">Personal Information</string>
    <string name="username">Username:</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="text_balance">Balance:</string>
    <string name="string_top_up">Top up</string>
    <string name="button_payment_setup">payment setup</string>
    <string name="text_top_up">Top up your account</string>
    <string name="button_pay">pay</string>
    <string name="button_select_payment_method">Payment Method</string>
    <string name="euro_sign">€</string>
    <string name="string_amount">Amount</string>
    <string name="recommend_type">Choose recommendation type:</string>

    <string-array name="recommender_types_list">
        <item>Distance</item>
        <item>Time</item>
        <item>Time and distance</item>
    </string-array>
    <string name="running_order_switch">Only Running Orders</string>
</resources>
