<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:text="@string/order_name"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/order_count"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/order_price"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="end" />

</LinearLayout>