<?xml version="1.0" encoding="utf-8"?>
<!-- Contains the bottomSheet for one menu item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_item_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/menu_item"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bottom_sheet_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_remove_black_24dp" />

        <com.google.android.material.button.MaterialButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bottom_sheet_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:icon="@drawable/ic_add_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_item_bottom"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/item_price"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="end" />

        <TextView
            android:id="@+id/brandName_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="BrandName"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="end" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/description"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>