<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stand_recommend"
        android:textColor="#000"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/stand_recommendation"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/stand_recommend_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/no_recommendation"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recommend_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="@string/recommend_distance"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/recommend_distance"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="distance"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recommend_time_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="@string/recommend_time"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/recommend_time"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="remainingTime"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout> -->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/stand_spinner_recommend"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center" />

        <Spinner
            android:id="@+id/stand_recommended_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="3dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/confirm_stand"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/confirm_stand"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="3dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/confirm_recommend"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/confirm_recommend"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>